--- a/index.html
+++ b/index.html
@@ -16,31 +16,31 @@
     <div class="container">
       <div class="one">
         <h1 class="one">
-          Hey
-          <span id="name">xyz</span>
+          Merhaba
+          <span id="name">Beyza</span>
         </h1>
-        <p class="two" id="greetingText">I really like your name btw!</p>
+        <p class="two" id="greetingText">Beyzam demeyi daya çok seviyorum bu arada</p>
       </div>
       <div class="three">
-        <p>It's Valentine!!! :D</p>
+        <p>Sana olan sevgimi göstermek istedim.</p>
       </div>
       <div class="four">
         <div class="text-box">
           <p class="hbd-chatbox">
-            Happy Valentine's Day!! Yeee! Love and blah blah...
+            Seni gerçekten çok seviyorum umarım...
           </p>
           <p class="fake-btn">Send</p>
         </div>
       </div>
       <div class="five">
-        <p class="idea-1">That's what I was going to do.</p>
-        <p class="idea-2">But then I stopped.</p>
+        <p class="idea-1">Böyle bir mesaj hazırlayıp yollayacaktım</p>
+        <p class="idea-2">Ama sonrasında durdum.</p>
         <p class="idea-3">
-          I realised, I wanted to do something <strong>special</strong>.
+          Ve senin için <strong>special</strong>bir şey yapmaya karar verdim.
         </p>
-        <p class="idea-4">Because,</p>
+        <p class="idea-4">Çünkü,</p>
         <p class="idea-5">
-          You are Special
+          Sen de çok özelsin
           <span>:)</span>
         </p>
         <p class="idea-6">
@@ -51,7 +51,7 @@
       <div class="six">
         <img src="img/vector.jpg" alt="" class = "girl-dp" id="imagePath" />
         <div class="wish">
-          <h3 class="wish-hbd">Happy Valentine's Day Gorgeous</h3>
+          <h3 class="wish-hbd">Seni çok ama çok seviyorum güzelim</h3>
           <h5 id="wishText">kuch kuch</h5>
         </div>
       </div>
@@ -124,8 +124,8 @@
         </svg>
       </div>
       <div class="nine">
-        <p>Okay, now come back and tell me if you liked it.</p>
-        <p id="replay">Or click, if you want to watch it again.</p>
+        <p>Seni çok sevdiğim için çok uğraşarak bunu hazırladım.</p>
+        <p id="replay">Eğer sevdiysen tıklayarak tekrar izleyebilirsin.</p>
         <p class="last-smile">:)</p>
       </div>
     </div>
