--- a/index.html
+++ b/index.html
@@ -44,8 +44,10 @@
           <span>:)</span>
         </p>
         <p class="idea-6">
-          <span>S</span>
-          <span>O</span>
+          <span>Y</span>
+          <span>A</span>
+          <span>N</span>
+          <span>İ</span>
         </p>
       </div>
       <div class="six">
@@ -125,7 +127,7 @@
       </div>
       <div class="nine">
         <p>Seni çok sevdiğim için çok uğraşarak bunu hazırladım.</p>
-        <p id="replay">Eğer sevdiysen tıklayarak tekrar izleyebilirsin.</p>
+        <p id="replay">Eğer sevdiysen (buraya) tıklayarak tekrar izleyebilirsin.</p>
         <p class="last-smile">:)</p>
       </div>
     </div>
