--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <p class="idea-1">Böyle bir mesaj hazırlayıp yollayacaktım</p>
         <p class="idea-2">Ama sonrasında durdum.</p>
         <p class="idea-3">
-          Ve senin için <strong>special</strong>bir şey yapmaya karar verdim.
+          Ve senin için <strong>özel </strong>bir şey yapmaya karar verdim.
         </p>
         <p class="idea-4">Çünkü,</p>
         <p class="idea-5">
