--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Merhaba Beyzam :)</title>
+    <title>Merhaba Mariye(m) :)</title>
     <link
       rel="stylesheet"
     />
@@ -17,9 +17,9 @@
       <div class="one">
         <h1 class="one">
           Merhaba
-          <span id="name">Beyza</span>
+          <span id="name">Mariye</span>
         </h1>
-        <p class="two" id="greetingText">Beyzam demeyi daya çok seviyorum bu arada</p>
+        <p class="two" id="greetingText">Mariyem deme demistin de ben seviyorum demeyi</p>
       </div>
       <div class="three">
         <p>Sana olan sevgimi göstermek istedim.</p>
